fixed preloader icon too big on phone and fixed hero video

--- a/assets/css/components/preloader.css
+++ b/assets/css/components/preloader.css
@@ -8,6 +8,12 @@
   z-index: 9999;
   background-color: #fff;
 }
+
+@media screen and (max-width: 600px) {
+  .preloader {
+    max-width: 500px;
+  }
+}
 .preloader span {
   width: 100%;
   height: 100%;
